Use events on a view

--- a/Boilerplate/index.html
+++ b/Boilerplate/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
 
-        <ul id="songs"></ul>
+        <div id="container"></div>
 
         <script src="js/lib/jquery-min.js"></script>
         <script src="js/lib/underscore-min.js"></script>
